--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,20 @@ env:
     matrix:
       - BOGUS_JOB=true
 
+addons:
+    apt:
+        packages: &cmake
+          - cmake
+          - cmake-data
+        sources: &sources
+          - george-edison55-precise-backports
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-precise
+          - llvm-toolchain-precise-3.5
+          - llvm-toolchain-precise-3.6
+          - llvm-toolchain-precise-3.7
+          - llvm-toolchain-precise-3.8
+
 matrix:
     exclude:
       - env: BOGUS_JOB=true
@@ -26,58 +40,58 @@ matrix:
         addons:
             apt:
                 packages:
+                  - *cmake
                   - clang-3.5
                   - libstdc++-5-dev
-                sources: &toolchain
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise
-                  - llvm-toolchain-precise-3.5
-                  - llvm-toolchain-precise-3.6
-                  - llvm-toolchain-precise-3.7
-                  - llvm-toolchain-precise-3.8
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.6
         addons:
             apt:
                 packages:
+                  - *cmake
                   - clang-3.6
                   - libstdc++-5-dev
-                sources: *toolchain
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.7
         addons:
             apt:
                 packages:
+                  - *cmake
                   - clang-3.7
                   - libstdc++-5-dev
-                sources: *toolchain
+                sources: *sources
 
       - compiler: clang++
         env: CXX_VERSION=3.8
         addons:
             apt:
                 packages:
+                  - *cmake
                   - clang-3.8
                   - libstdc++-5-dev
-                sources: *toolchain
+                sources: *sources
 
       - compiler: g++
         env: CXX_VERSION=4.9
         addons:
             apt:
                 packages:
+                  - *cmake
                   - g++-4.9
-                sources: *toolchain
+                sources: *sources
 
       - compiler: g++
         env: CXX_VERSION=5
         addons:
             apt:
                 packages:
+                  - *cmake
                   - g++-5
-                sources: *toolchain
+                sources: *sources
 
 before_install:
   - git config --global user.name "Travis Bot"
@@ -111,27 +125,10 @@ before_install:
   - echo "METAL_VERSION=${METAL_VERSION}"
 
 install:
-  - CMAKE_ROOT="http://www.cmake.org/files/"
-  - CMAKE_MAJOR_MINOR=$(travis_retry curl -Ls "${CMAKE_ROOT}" | grep -Po 'href="\Kv[0-9.]+(?=/")' | sort -V | tail -2 | head -1)
-  - CMAKE_PKG=$(travis_retry curl -Ls "${CMAKE_ROOT}/${CMAKE_MAJOR_MINOR}" | grep -Eo "cmake-${CMAKE_MAJOR_MINOR##*v}[0-9.]+-Linux-x86_64[.]tar[.]gz" | sort -V | tail -1)
-  - CMAKE_URL="${CMAKE_ROOT}/${CMAKE_MAJOR_MINOR}/${CMAKE_PKG}"
-
-  - |
-    if [[ -z "${CMAKE_MAJOR_MINOR}" || -z "${CMAKE_PKG}" ]] || ! curl -ILsf "${CMAKE_URL}" &> /dev/null
-    then
-        #fallback to known URL
-        CMAKE_URL="https://cmake.org/files/v3.1/cmake-3.1.0-Linux-x86_64.tar.gz"
-    fi
-
-  - echo "CMAKE_URL=${CMAKE_URL}"
-  - mkdir -p "${DEPS_PATH}/cmake"
-  - travis_retry curl -L "${CMAKE_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/cmake"
-  - export PATH=${DEPS_PATH}/cmake/bin:${PATH}
-  - cmake --version
-
   - |
     if [[ "${BUILD_DOC}" == "true" ]]
     then
+        # download the latest doxygen available
         DOXYGEN_FTP="ftp://ftp.stack.nl/pub/users/dimitri/"
         DOXYGEN_PKG=$(travis_retry curl -Ls "${DOXYGEN_FTP}" | grep -Eo "doxygen-[0-9.]+linux[.]bin[.]tar[.]gz" | sort -V | tail -1)
         DOXYGEN_URL="${DOXYGEN_FTP}/${DOXYGEN_PKG}"
