--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ if(METAL_ENABLE_EXTRA_WARNINGS)
     metal_try_add_flag(-Weverything)
     metal_try_add_flag(-Wno-c++98-compat)
     metal_try_add_flag(-Wno-c++98-compat-pedantic)
+    metal_try_add_flag(-Wno-documentation)
     metal_try_add_flag(-Wno-documentation-unknown-command)
     metal_try_add_flag(/W4)
 endif()
