--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -236,10 +236,10 @@ ALIASES += strike{1}="<div class=\"strike\">\1</div>"
 
 ALIASES +=value="\ref value"
 ALIASES +=values="\ref value \"Values\""
-ALIASES +=optional="\ref optional"
-ALIASES +=optionals="\ref optional \"Optionals\""
 ALIASES +=number="\ref number"
 ALIASES +=numbers="\ref number \"Numbers\""
+ALIASES +=boolean="\ref number \"Boolean\""
+ALIASES +=booleans="\ref number \"Booleans\""
 ALIASES +=expression="\ref expression"
 ALIASES +=expressions="\ref expression \"Expressions\""
 ALIASES +=lambda="\ref lambda"
@@ -251,9 +251,11 @@ ALIASES +=pairs="\ref pair \"Pairs\""
 ALIASES +=map="\ref map"
 ALIASES +=maps="\ref map \"Maps\""
 
-ALIASES +=tip{1}="<div class=\"panel panel-info\"><div class="panel-heading"><span class=\"octicon octicon-light-bulb\"></span>Tip</div><div class="panel-body">\1</div></div>"
-ALIASES +=note{1}="<div class=\"panel panel-warning\"><div class="panel-heading"><span class=\"octicon octicon-info\"></span>Note</div><div class="panel-body">\1</div></div>"
-ALIASES +=danger{1}="<div class=\"panel panel-danger\"><div class="panel-heading">Beware <span class=\"octicon octicon-stop\"></span></div><div class="panel-body">\1</div></div>"
+ALIASES +=semantics="\par Semantics"
+
+ALIASES +=tip{1}="<div class=\"panel panel-info\"><div class="panel-heading"><span class=\"octicon octicon-light-bulb\"></span></div><div class="panel-body">\1</div></div>"
+ALIASES +=note{1}="<div class=\"panel panel-warning\"><div class="panel-heading"><span class=\"octicon octicon-info\"></span></div><div class="panel-body">\1</div></div>"
+ALIASES +=danger{1}="<div class=\"panel panel-danger\"><div class="panel-heading"><span class=\"octicon octicon-stop\"></span></div><div class="panel-body">\1</div></div>"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
