--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
-language: cpp
 os: linux
 sudo: false
+language: cpp
 
 git:
   depth: 1
@@ -18,83 +18,73 @@ env:
 
 addons:
     apt:
-        packages: &cmake
+        packages: &base_packages
           - cmake
           - cmake-data
-        sources: &sources
+        sources: &base_sources
           - george-edison55-precise-backports
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-precise
-          - llvm-toolchain-precise-3.5
-          - llvm-toolchain-precise-3.6
-          - llvm-toolchain-precise-3.7
-          - llvm-toolchain-precise-3.8
 
 matrix:
     exclude:
       - env: BOGUS_JOB=true
 
     include:
-      - compiler: clang++
-        env: BUILD_DOC=true
+      - env: BUILD_DOC=true
 
       - compiler: clang++
         env: CXX_VERSION=3.5
         addons:
             apt:
                 packages:
-                  - *cmake
-                  - clang-3.5
-                  - libstdc++-5-dev
-                sources: *sources
+                  - *base_packages
+                  - libstdc++-4.8-dev
+                sources: *base_sources
 
       - compiler: clang++
         env: CXX_VERSION=3.6
         addons:
             apt:
                 packages:
-                  - *cmake
-                  - clang-3.6
-                  - libstdc++-5-dev
-                sources: *sources
+                  - *base_packages
+                  - libstdc++-4.8-dev
+                sources: *base_sources
 
       - compiler: clang++
         env: CXX_VERSION=3.7
         addons:
             apt:
                 packages:
-                  - *cmake
-                  - clang-3.7
-                  - libstdc++-5-dev
-                sources: *sources
+                  - *base_packages
+                  - libstdc++-4.8-dev
+                sources: *base_sources
 
       - compiler: clang++
         env: CXX_VERSION=3.8
         addons:
             apt:
                 packages:
-                  - *cmake
-                  - clang-3.8
-                  - libstdc++-5-dev
-                sources: *sources
+                  - *base_packages
+                  - libstdc++-4.8-dev
+                sources: *base_sources
 
       - compiler: g++
         env: CXX_VERSION=4.9
         addons:
             apt:
                 packages:
-                  - *cmake
+                  - *base_packages
                   - g++-4.9
-                sources: *sources
+                sources: *base_sources
 
       - compiler: g++
         env: CXX_VERSION=5
         addons:
             apt:
                 packages:
-                  - *cmake
+                  - *base_packages
                   - g++-5
-                sources: *sources
+                sources: *base_sources
 
 before_install:
   - git config --global user.name "Travis Bot"
@@ -138,11 +128,46 @@ install:
         DOXYGEN_FTP="ftp://ftp.stack.nl/pub/users/dimitri/"
         DOXYGEN_PKG=$(travis_retry curl -Ls "${DOXYGEN_FTP}" | grep -Eo "doxygen-[0-9.]+linux[.]bin[.]tar[.]gz" | sort -V | tail -1)
         DOXYGEN_URL="${DOXYGEN_FTP}/${DOXYGEN_PKG}"
-        echo "DOXYGEN_URL=${DOXYGEN_URL}" &&
+        echo "${DOXYGEN_URL}"
         mkdir -p "${DEPS_PATH}/doxygen" &&
-        travis_retry curl -L "${DOXYGEN_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen" &&
-        export PATH=${DEPS_PATH}/doxygen/bin:${PATH} &&
-        doxygen --version
+        travis_retry curl -L "${DOXYGEN_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"
+        export PATH="${DEPS_PATH}/doxygen/bin:${PATH}"
+    fi
+
+  - |
+    if [[ "${CXX}" == "clang++" ]]
+    then
+        # manually download clang and libc++
+        CLANG_URL="http://llvm.org/releases/${CXX_VERSION}.0/clang+llvm-${CXX_VERSION}.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz"
+        echo "${CLANG_URL}"
+        mkdir -p "${DEPS_PATH}/clang" &&
+        travis_retry curl -L "${CLANG_URL}" | tar --strip-components=1 -xJ -C "${DEPS_PATH}/clang" &&
+        ln -s "${DEPS_PATH}/clang/bin/clang++" "${DEPS_PATH}/clang/bin/clang++-${CXX_VERSION}"
+        export PATH="${DEPS_PATH}/clang/bin:${PATH}"
+
+        LLVM_URL="http://llvm.org/releases/${CXX_VERSION}.0/llvm-${CXX_VERSION}.0.src.tar.xz"
+        echo "${LLVM_URL}"
+        mkdir -p "${DEPS_PATH}/llvm" &&
+        travis_retry curl -L "${LLVM_URL}" | tar --strip-components=1 -xJ -C "${DEPS_PATH}/llvm"
+
+        LIBCXX_URL="http://llvm.org/releases/${CXX_VERSION}.0/libcxx-${CXX_VERSION}.0.src.tar.xz"
+        echo "${LIBCXX_URL}"
+        mkdir -p "${DEPS_PATH}/llvm/projects/libcxx" &&
+        travis_retry curl -L "${LIBCXX_URL}" | tar --strip-components=1 -xJ -C "${DEPS_PATH}/llvm/projects/libcxx"
+
+        LIBCXXABI_URL="http://llvm.org/releases/${CXX_VERSION}.0/libcxxabi-${CXX_VERSION}.0.src.tar.xz"
+        echo "${LIBCXXABI_URL}"
+        mkdir -p "${DEPS_PATH}/llvm/projects/libcxxabi" &&
+        travis_retry curl -L "${LIBCXXABI_URL}" | tar --strip-components=1 -xJ -C "${DEPS_PATH}/llvm/projects/libcxxabi"
+
+        mkdir -p "${DEPS_PATH}/llvm/build" &&
+        (cd "${DEPS_PATH}/llvm/build" && cmake .. -DCMAKE_INSTALL_PREFIX="${DEPS_PATH}/llvm/install") &&
+        (cd "${DEPS_PATH}/llvm/build/projects/libcxx" && make install -j2) &&
+        (cd "${DEPS_PATH}/llvm/build/projects/libcxxabi" && make install -j2)
+
+        export CXXFLAGS="-stdlib=libc++ -nostdinc++ -isystem ${DEPS_PATH}/llvm/install/include/c++/v1"
+        export LDFLAGS="-L ${DEPS_PATH}/llvm/install/lib -l c++ -l c++abi"
+        export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${DEPS_PATH}/llvm/install/lib"
     fi
 
 before_script:
@@ -162,7 +187,11 @@ before_script:
         CMAKE_ARGS+=("-DMETAL_VERSION=${METAL_VERSION}")
     fi
 
-  - (cd "${EXTERNAL_BUILD_PATH}" && cmake "${EXTERNAL_SOURCE_PATH}" ${CMAKE_ARGS[@]})
+  - |
+    if [[ "${BUILD_DOC}" != "true" ]]
+    then
+      (cd "${EXTERNAL_BUILD_PATH}" && cmake "${EXTERNAL_SOURCE_PATH}" ${CMAKE_ARGS[@]})
+    fi
 
 script:
   - |
