[doc] refactor the documentation
simplify the bootstraper, update dependencies and get rid of unnecessary
cruft

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -11,7 +11,9 @@ endif()
 configure_file(Doxyfile.in METAL_DOXYFILE @ONLY)
 
 add_custom_target(doc
-    COMMAND ${CMAKE_COMMAND} -E remove_directory html
+    COMMAND ${CMAKE_COMMAND} -E remove_directory "html"
     COMMAND ${DOXYGEN_EXECUTABLE} METAL_DOXYFILE
-    COMMENT "building documentation..."
+    COMMAND ${CMAKE_COMMAND} -E remove
+        "html/*.png" "html/dir_*.html" "html/namespacemetal.html"
+        "html/dynsections.js" "html/doxygen.css" "html/tabs.css"
 )
