--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,6 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(Metal CXX)
 
-set(METAL_MAJOR_VERSION 0)
-set(METAL_MINOR_VERSION 2)
-set(METAL_PATCH_VERSION 0)
-set(
-    METAL_VERSION
-    ${METAL_MAJOR_VERSION}.${METAL_MINOR_VERSION}.${METAL_PATCH_VERSION}
-)
-
 if(WIN32 AND NOT CYGWIN)
   set(METAL_CMAKE_INSTALL_DIR_DEF CMake)
 else()
@@ -84,8 +76,26 @@ foreach(dialect
 endforeach()
 
 set(METAL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/)
-
 include_directories("${METAL_INCLUDE_DIR}")
+
+file(
+    STRINGS "${METAL_INCLUDE_DIR}/metal/config/version.hpp"
+    METAL_CONFIG_VERSION_HPP
+    REGEX "METAL_[A-Z]+ [0-9]+"
+    LIMIT_COUNT 3
+)
+
+LIST(GET METAL_CONFIG_VERSION_HPP 0 METAL_MAJOR)
+LIST(GET METAL_CONFIG_VERSION_HPP 1 METAL_MINOR)
+LIST(GET METAL_CONFIG_VERSION_HPP 2 METAL_PATCH)
+
+string(REGEX REPLACE ".*MAJOR ([0-9]+).*" "\\1" METAL_MAJOR "${METAL_MAJOR}")
+string(REGEX REPLACE ".*MINOR ([0-9]+).*" "\\1" METAL_MINOR "${METAL_MINOR}")
+string(REGEX REPLACE ".*PATCH ([0-9]+).*" "\\1" METAL_PATCH "${METAL_PATCH}")
+
+set(METAL_VERSION "${METAL_MAJOR}.${METAL_MINOR}.${METAL_PATCH}")
+
+message(STATUS "Metal version ${METAL_VERSION}")
 
 enable_testing()
 
