--- a/cmake/MetalConfig.cmake.in
+++ b/cmake/MetalConfig.cmake.in
@@ -7,4 +7,4 @@
 #   METAL_INCLUDE_DIRS - include directories for Metal
 
 get_filename_component(METAL_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-set(METAL_INCLUDE_DIRS "@METAL_INCLUDE_DIRS_CONF@")
+set(METAL_INCLUDE_DIRS "@METAL_INCLUDE_DIRS@")
