--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ addons:
           - llvm-toolchain-precise-3.6
           - llvm-toolchain-precise-3.7
           - llvm-toolchain-precise-3.8
+          - llvm-toolchain-precise-3.9
 
 matrix:
     exclude:
