--- a/example/external/CMakeLists.txt
+++ b/example/external/CMakeLists.txt
@@ -8,7 +8,10 @@ project(external CXX)
 
 set(FIND_PACKAGE_ARGS REQUIRED)
 if(METAL_VERSION)
-    set(FIND_PACKAGE_ARGS ${METAL_VERSION} EXACT ${FIND_PACKAGE_ARGS})
+    if(METAL_VERSION_EXACT)
+        set(FIND_PACKAGE_ARGS EXACT ${FIND_PACKAGE_ARGS})
+    endif()
+    set(FIND_PACKAGE_ARGS ${METAL_VERSION} ${FIND_PACKAGE_ARGS})
 endif()
 
 find_package(Metal ${FIND_PACKAGE_ARGS})
