[ci] temporarily allow builds using clang 3.9 to fail on travis
see travis-ci/apt-source-whitelist#300

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,10 @@ addons:
           - llvm-toolchain-precise-3.9
 
 matrix:
+    allow_failures:
+      - compiler: clang++
+        env: CXX_VERSION=3.9
+
     exclude:
       - env: BOGUS_JOB=true
 
