--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@
 # See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt
 
 os: linux
-sudo: false
+dist: trusty
+sudo: required
 language: cpp
 
 git:
@@ -19,23 +20,10 @@ env:
 addons:
     apt:
         packages: &base_packages
-          - cmake
-          - cmake-data
         sources: &base_sources
-          - george-edison55-precise-backports
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-precise
-          - llvm-toolchain-precise-3.5
-          - llvm-toolchain-precise-3.6
-          - llvm-toolchain-precise-3.7
-          - llvm-toolchain-precise-3.8
-          - llvm-toolchain-precise-3.9
 
 matrix:
-    allow_failures:
-      - compiler: clang++
-        env: CXX_VERSION=3.9
-
     exclude:
       - env: BOGUS_JOB=true
 
@@ -49,8 +37,10 @@ matrix:
                 packages:
                   - *base_packages
                   - clang-3.5
-                  - libstdc++-4.9-dev
-                sources: *base_sources
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.5 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
       - compiler: clang++
         env: CXX_VERSION=3.6
@@ -59,7 +49,10 @@ matrix:
                 packages:
                   - *base_packages
                   - clang-3.6
-                sources: *base_sources
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.6 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
       - compiler: clang++
         env: CXX_VERSION=3.7
@@ -68,7 +61,10 @@ matrix:
                 packages:
                   - *base_packages
                   - clang-3.7
-                sources: *base_sources
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.7 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
       - compiler: clang++
         env: CXX_VERSION=3.8
@@ -77,7 +73,10 @@ matrix:
                 packages:
                   - *base_packages
                   - clang-3.8
-                sources: *base_sources
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
       - compiler: clang++
         env: CXX_VERSION=3.9
@@ -86,7 +85,10 @@ matrix:
                 packages:
                   - *base_packages
                   - clang-3.9
-                sources: *base_sources
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
       - compiler: g++
         env: CXX_VERSION=5
