--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,19 @@ matrix:
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main'
                     key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
 
+      - compiler: clang++
+        env: CXX_VERSION=4.0 CXXFLAGS=-stdlib=libc++
+        addons:
+            apt:
+                packages:
+                  - *base_packages
+                  - clang-4.0
+                  - libc++-dev
+                sources:
+                  - *base_sources
+                  - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty main'
+                    key_url: 'http://apt.llvm.org/llvm-snapshot.gpg.key'
+
       - compiler: g++
         env: CXX_VERSION=5
         addons:
