--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
 addons:
     apt:
         packages: &ubuntu_packages
+          - libstdc++-5-dev
         sources: &ubuntu_sources
           - ubuntu-toolchain-r-test
 
@@ -180,61 +181,49 @@ before_install:
   - git config --global user.email "\<\>"
 
   - METAL_SOURCE_PATH="${TRAVIS_BUILD_DIR}"
-  - EXTERNAL_SOURCE_PATH="${METAL_SOURCE_PATH}/example/external/"
 
   - METAL_BUILD_PATH="${TRAVIS_BUILD_DIR}/build"
   - mkdir -p "${METAL_BUILD_PATH}"
 
-  - METAL_INSTALL_PATH="${TRAVIS_BUILD_DIR}/install"
-  - mkdir -p "${METAL_INSTALL_PATH}"
-
-  - EXTERNAL_BUILD_PATH="${METAL_BUILD_PATH}/example/external/"
-  - mkdir -p "${EXTERNAL_BUILD_PATH}"
-
   - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
   - mkdir -p "${DEPS_PATH}"
 
-  - |
-    if [[ -n "${TRAVIS_TAG}" ]]
-    then
-        METAL_VERSION="${TRAVIS_TAG}"
-        METAL_VERSION_EXACT=true
-    else
-        METAL_VERSION=$( \
-            curl -Ls https://github.com/brunocodutra/metal/tags | \
-            awk '/tag-name/{print $3;exit}' FS='[<>]' \
-        )
-        METAL_VERSION_EXACT=false
-    fi
-
-  - METAL_VERSION="${METAL_VERSION%%-*}"
-  - METAL_VERSION="${METAL_VERSION##*v}"
-  - echo "METAL_VERSION=${METAL_VERSION}"
-
 install:
   - |
-    if [[ "${TRAVIS_OS_NAME}" == "osx" ]]
+    if [[ "${TRAVIS_OS_NAME}" == "linux" ]]
     then
-        brew update
-        brew unlink cmake doxygen
-        brew install cmake doxygen
-        true
+        CMAKE_URL="http://www.cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz"
+        mkdir -p "${DEPS_PATH}/cmake" &&
+        travis_retry curl -L "${CMAKE_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/cmake"
+        export PATH=${DEPS_PATH}/cmake/bin:${PATH}
+    else
+        CMAKE_URL="http://www.cmake.org/files/v3.4/cmake-3.4.0-Darwin-x86_64.tar.gz"
+        mkdir -p "${DEPS_PATH}/cmake" &&
+        travis_retry curl -L "${CMAKE_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/cmake"
+        export PATH=${DEPS_PATH}/cmake/CMake.app/Contents/bin:${PATH}
     fi
 
   - |
-    if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_OS_NAME}" == "linux" ]]
+    if [[ "${BUILD_DOC}" == "true" ]]
     then
-        # download the latest doxygen available
-        DOXYGEN_FTP="ftp://ftp.stack.nl/pub/users/dimitri/"
-        DOXYGEN_PKG=$(travis_retry curl -Ls "${DOXYGEN_FTP}" | grep -Eo "doxygen-[0-9.]+linux[.]bin[.]tar[.]gz" | sort -V | tail -1)
-        DOXYGEN_URL="${DOXYGEN_FTP}/${DOXYGEN_PKG}"
-        mkdir -p "${DEPS_PATH}/doxygen" &&
-        travis_retry curl -L "${DOXYGEN_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"
-        export PATH="${DEPS_PATH}/doxygen/bin:${PATH}"
+        if [[ "${TRAVIS_OS_NAME}" == "linux" ]]
+        then
+            # download the latest doxygen available
+            DOXYGEN_FTP="ftp://ftp.stack.nl/pub/users/dimitri/"
+            DOXYGEN_PKG=$(travis_retry curl -Ls "${DOXYGEN_FTP}" | grep -Eo "doxygen-[0-9.]+linux[.]bin[.]tar[.]gz" | sort -V | tail -1)
+            DOXYGEN_URL="${DOXYGEN_FTP}/${DOXYGEN_PKG}"
+            mkdir -p "${DEPS_PATH}/doxygen" &&
+            travis_retry curl -L "${DOXYGEN_URL}" | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"
+            export PATH="${DEPS_PATH}/doxygen/bin:${PATH}"
+        else
+            brew update
+            brew unlink doxygen
+            brew install doxygen
+        fi
     fi
 
 before_script:
-  - CMAKE_ARGS=("-DCMAKE_INSTALL_PREFIX=${METAL_INSTALL_PATH}")
+  - CMAKE_ARGS=()
 
   - |
     if [[ -n "${CXX}" && -n "${CXX_VERSION}" ]]
@@ -242,17 +231,7 @@ before_script:
         CMAKE_ARGS+=("-DCMAKE_CXX_COMPILER=${CXX}-${CXX_VERSION}")
     fi
 
-  - (cd "${METAL_BUILD_PATH}" && cmake "${METAL_SOURCE_PATH}" ${CMAKE_ARGS[@]} && make install)
-
-  - CMAKE_ARGS+=("-DCMAKE_PREFIX_PATH=${METAL_INSTALL_PATH}")
-  - CMAKE_ARGS+=("-DMETAL_VERSION=${METAL_VERSION}")
-  - CMAKE_ARGS+=("-DMETAL_VERSION_EXACT=${METAL_VERSION_EXACT}")
-
-  - |
-    if [[ "${BUILD_DOC}" != "true" ]]
-    then
-      (cd "${EXTERNAL_BUILD_PATH}" && cmake "${EXTERNAL_SOURCE_PATH}" ${CMAKE_ARGS[@]})
-    fi
+  - (cd "${METAL_BUILD_PATH}" && cmake "${METAL_SOURCE_PATH}" ${CMAKE_ARGS[@]})
 
 script:
   - |
@@ -268,6 +247,5 @@ script:
             git -C "${METAL_BUILD_PATH}/doc/html/" push origin gh-pages &> /dev/null
         fi
     else
-        (cd "${EXTERNAL_BUILD_PATH}" && make all) &&
         (cd "${METAL_BUILD_PATH}" && ctest --output-on-failure)
     fi
