--- a/test/deployment/CMakeLists.txt
+++ b/test/deployment/CMakeLists.txt
@@ -2,12 +2,5 @@
 # Distributed under the Boost Software License, Version 1.0.
 # See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt
 
-add_subdirectory(unit)
-add_subdirectory(header)
-add_subdirectory(deployment)
-
-add_custom_target(tests DEPENDS
-    test.unit
-    test.header
-    test.deployment
-)
+test_deployment(test.deployment Metal metal.hpp)
+test_build_and_run(test.deployment)
