revamp the way compile options are configured

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,20 @@
 
 cmake_minimum_required(VERSION 3.4)
 
+if(NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "")
+endif()
+
 project(Metal CXX)
+
+option(METAL_STRICT                 "treat compiler warnings as errors"     OFF)
+option(METAL_VERBOSE                "increase output verbosity"             OFF)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 include(Deploy)
 include(TestTree)
+include(CompileFlags)
 
 set(METAL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 
@@ -35,9 +43,37 @@ set_target_properties(Metal PROPERTIES
     INTERFACE_INCLUDE_DIRECTORIES ${METAL_INCLUDE_DIR}
 )
 
-deploy(Metal)
+target_compile_flags(Metal INTERFACE -W)
+target_compile_flags(Metal INTERFACE -Wextra)
+target_compile_flags(Metal INTERFACE -pedantic)
 
-include("${CMAKE_SOURCE_DIR}/cmake/config.cmake")
+if(NOT MSVC)
+    target_compile_flags(Metal INTERFACE -Wall)
+endif()
+
+if(METAL_STRICT)
+    target_compile_flags(Metal INTERFACE -pedantic-errors)
+    target_compile_flags(Metal INTERFACE -Werror)
+    target_compile_flags(Metal INTERFACE /Za)
+    target_compile_flags(Metal INTERFACE /WX)
+endif()
+
+if(METAL_VERBOSE)
+    target_compile_flags(Metal INTERFACE -v)
+    target_compile_flags(Metal INTERFACE -ftemplate-backtrace-limit=0)
+    target_compile_flags(Metal INTERFACE -fdiagnostics-show-template-tree)
+    target_compile_flags(Metal INTERFACE -fno-elide-type)
+endif()
+
+target_compile_flags(Metal INTERFACE -stdlib=libc++ LIBS c++ c++abi)
+
+target_compile_flags(Metal INTERFACE /std:c++latest)
+
+target_compile_flags(Metal INTERFACE -std=c++17
+    FALLBACK -std=c++1z -std=c++14 -std=c++1y
+)
+
+deploy(Metal)
 
 enable_testing()
 
