--- a/.travis.yml
+++ b/.travis.yml
@@ -59,13 +59,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.4 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.4
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.4
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.4 main'
@@ -74,13 +75,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.5 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.5
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.5
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.5 main'
@@ -89,13 +91,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.6 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.6
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.6
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.6 main'
@@ -104,13 +107,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.7 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.7
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.7
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.7 main'
@@ -119,13 +123,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.8 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.8
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.8
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.8 main'
@@ -134,13 +139,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=3.9 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=3.9
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-3.9
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-3.9 main'
@@ -149,13 +155,14 @@ matrix:
       - os: linux
         dist: trusty
         compiler: clang++
-        env: CXX_VERSION=4.0 CXXFLAGS=-stdlib=libc++
+        env: CXX_VERSION=4.0
         addons:
             apt:
                 packages:
                   - *ubuntu_packages
                   - clang-4.0
                   - libc++-dev
+                  - libc++abi-dev
                 sources:
                   - *ubuntu_sources
                   - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty main'
