provide an adaptor to ease migration from Boost.MPL

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
     apt:
         packages: &ubuntu_packages
           - libstdc++-5-dev
+          - libboost-dev
         sources: &ubuntu_sources
           - ubuntu-toolchain-r-test
 
