[doc] merge modules.html and group__metal.html

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -15,6 +15,6 @@ add_custom_target(doc
     COMMAND ${DOXYGEN_EXECUTABLE} METAL_DOXYFILE
     COMMAND ${CMAKE_COMMAND} -E remove
         "html/*.png" "html/dynsections.js" "html/doxygen.css" "html/tabs.css"
-        "html/dir_*.html" "html/namespacemetal.html"
+        "html/dir_*.html" "html/namespacemetal.html" "html/modules.html"
         "html/namespacemembers_type.html"
 )
