[doc] improve the discussion about SFINAE friendliness

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -8,6 +8,9 @@ set(EXCLUDE)
 if(NOT Boost_FOUND)
     list(APPEND EXCLUDE "mpl")
 else()
+    if(Boost_MINOR_VERSION LESS 61)
+        list(APPEND EXCLUDE "sfinae")
+    endif()
     include_directories(${Boost_INCLUDE_DIRS})
 endif()
 
