[ci] test GCC 4.7 on Travis
brunocodutra/metal#59

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,17 @@ matrix:
       - os: linux
         dist: trusty
         compiler: g++
+        env: CXXVER=4.7
+        addons:
+            apt:
+                packages:
+                  - *ubuntu_packages
+                  - g++-4.7
+                sources: *ubuntu_sources
+
+      - os: linux
+        dist: trusty
+        compiler: g++
         env: CXXVER=4.8
         addons:
             apt:
